samples/_failures_safe/1761096618_d30e16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09b78855.c: In function ‘main’:
./samples/SAFE/__tmp_09b78855.c:149:5: error: expected expression at end of input
  149 |     add_edge(&g, 4,
      |     ^~~~~~~~
./samples/SAFE/__tmp_09b78855.c:149:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_09b78855.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_09b78855.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge(&g, 4,
      |     ^~~~~~~~
